--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>home by quartzmo</title>
+    <title>quartzmo</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>home</h1>
-        <h2>quartzmo</h2>
+        <h1>Chris Smith</h1>
+        <h2><a href="https://github.com/quartzmo">@quartzmo</a></h2>
         <a href="https://github.com/quartzmo" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>Welcome to GitHub Pages.</h3>
+          <h3>Web developer. Writing interactive books about CoffeeScript and JavaScript.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
