very weak pres index page

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Quartzmo Presentations</title>
 </head>
 <body>
-  <h1>Presentations</h1>
+  <h1>Quartzmo Presentations</h1>
+  <ul>
+      <li><a href="backbone-firebase-jekyll/index.html">backbone-firebase-jekyll</a></li>
+  </ul>
 </body>
 </html>
