--- a/presentations/backbone-firebase-jekyll/index.html
+++ b/presentations/backbone-firebase-jekyll/index.html
@@ -285,5 +285,9 @@
 
 		</script>
 
+        <script src="//static.getclicky.com/js" type="text/javascript"></script>
+        <script type="text/javascript">try{ clicky.init(100601904); }catch(e){}</script>
+        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100601904ns.gif" /></p></noscript>
+
 	</body>
 </html>
