a few links on index

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 <div id="content-wrapper">
     <div class="inner clearfix">
         <section id="main-content">
-            <h3>Web developer. Writing interactive books about CoffeeScript and JavaScript.</h3>
+            <h3>Web developer living in Salt Lake City, Utah, USA. Writing interactive books about CoffeeScript and JavaScript at <a href="http://www.scriptybooks.com">scriptybooks.com</a>.</h3>
         </section>
 
         <aside id="sidebar">
-
+          <ul style="font-size: 17px; font-weight: bold;">
+              <li style="list-style-type: none;"><a href="http://www.scriptybooks.com">scriptybooks.com</a></li>
+              <li style="list-style-type: none;"><a href="http://www.coffeescriptlove.com">coffeescriptlove.com</a></li>
+              <li style="list-style-type: none;"><a href="https://twitter.com/quartzmo">@quartzmo</a></li>
+          </ul>
         </aside>
     </div>
 </div>
