--- a/index.html
+++ b/index.html
@@ -1,56 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print"/>
-
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <title>quartzmo</title>
-</head>
-
-<body>
-<header>
-    <div class="inner">
-        <h1>Chris Smith</h1>
-
-        <h2><a href="https://github.com/quartzmo">@quartzmo</a></h2>
-        <a href="https://github.com/quartzmo" class="button">
-            <small>Follow me on</small>
-            GitHub</a>
-    </div>
-</header>
-
-<div id="content-wrapper">
-    <div class="inner clearfix">
-        <section id="main-content">
-            <h3>Web developer living in Salt Lake City, Utah, USA. Writing interactive books about CoffeeScript and JavaScript at <a href="http://www.scriptybooks.com">scriptybooks.com</a>.</h3>
-        </section>
-
-        <aside id="sidebar">
-          <ul style="font-size: 17px; font-weight: bold;">
-              <li style="list-style-type: none;"><a href="http://www.scriptybooks.com">scriptybooks.com</a></li>
-              <li style="list-style-type: none;"><a href="http://www.coffeescriptlove.com">coffeescriptlove.com</a></li>
-              <li style="list-style-type: none;"><a href="https://twitter.com/quartzmo">@quartzmo</a></li>
-          </ul>
-        </aside>
-    </div>
-</div>
-
-
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try {
-    clicky.init(100601904);
-} catch (e) {
-}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100601904ns.gif"/></p></noscript>
-
-</body>
+	<head>
+        <title>Interactive static sites with Jekyll, Backbone.js, and Firebase - quartzmo.com</title>
+		<meta http-equiv="REFRESH" content="0;url=/presentations/backbone-firebase-jekyll/">
+	</head>
+	<body>
+		This page has moved. You will be automatically redirected to its new location. If you aren't forwarded to the new page, <a href="/presentations/backbone-firebase-jekyll/">click here</a>.
+	</body>
 </html>
